# DatabaseDesign

./: CMakeLists.txt  README.md  main.cpp
src/: BufferFrame.cpp  BufferFrame.h  BufferManager.cpp  BufferManager.h  Page.h  Parser.cpp  Parser.h  Record.h  Schema.cpp  Schema.h  SlottedPage.cpp  SlottedPage.h  TID.h  Types.h
static/: schema.sql
